[package]
name = "async-exec"
version = "0.1.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "Simple async task executor with a built-in HTTP task monitor"
license = "MIT"
keywords = [ "async", "task", "http", "runtime", "executor" ]
repository = "https://github.com/NathanRoyer/async-exec"
categories = [ "asynchronous" ]

[dependencies]
async-fifo = "0.6"

serde = { version = "1.0", optional = true, features = ["derive"] }
futures-lite = { version = "2.3", optional = true }
serde_json = { version = "1.0", optional = true }
async-net = { version = "2.0", optional = true }

[features]
monitor = [ "dep:async-net", "dep:serde_json", "dep:serde", "dep:futures-lite" ]
